--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Andrey Bejarano<erik.bejarano@digitalhouse.com>",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-session": "^1.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
